<resources>
    <string name="app_name">DiaTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DiaTracker</string>
    <string name="nav_header_subtitle">Group 6</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dietary Intake</string>
    <string name="menu_gallery">Glucose Level</string>
    <string name="menu_slideshow">Insulin Frequency</string>
    <string name="menu_settings">Settings</string>

    <string name="sugar_input">Level (mg/dL)</string>
    <string name="sugar_info">Blood sugar levels should be between 70-130 mg/dL before a meal and up to 180 mg/dL after</string>

    <string name="help_title">DiaTracker - Help</string>
    <string name="help_message">This app is used to help users keep track of important health information.\n\n
        You will enter daily food intake, blood sugar levels, and insulin injections.\n\n
        The app will inform you and your doctor if you are not receiving the correct amounts. </string>
    <string name="reset_message">This will clear ALL previously saved data from your device. It cannot be recovered.\n\n
    Are you sure?</string>
    <string name="high_message">Your blood sugar is high, please go see a doctor.</string>
    <string name="low_message">Your blood sugar is low, please go see a doctor.</string>
    <string name="dietary_message">Your %1$s consumption is %2$s, your doctor has been notified.</string>
    <string name="dietary_email">Your patient %1$s\'s %2$s consumption is %3$s.</string>
</resources>
