<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dietary"
            android:icon="@drawable/food"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_glucose"
            android:icon="@drawable/sugar"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_insulin"
            android:icon="@drawable/insulin"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>
</menu>
