<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dietary">

    <fragment
        android:id="@+id/nav_dietary"
        android:name="com.diatracker.ui.dietary.DietaryFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_dietary">
    </fragment>
        <!--<action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.diatracker.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_dietary" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>-->

    <fragment
        android:id="@+id/nav_glucose"
        android:name="com.diatracker.ui.glucose.GlucoseFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_glucose" />

    <fragment
        android:id="@+id/nav_insulin"
        android:name="com.diatracker.ui.insulin.InsulinFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_insulin" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.diatracker.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>